# Vigil

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  IDEAS.md  PLAN.md  PROGRESS.md  README.md  pyproject.toml
alembic/: README  env.py
analysis/: __init__.py  _assignment.py  _encounter.py  _jobs.py  ability_classifier.py  burst.py  cartography.py  consensus.py  consistency.py  death_inference.py  dps_check.py  fault_attribution.py  fault_breakdown.py  fault_disambiguation.py  faults.py  fight_model_refresh.py  gate_diagnostic.py  gcd.py  mechanic_classifier.py  mit_audit.py  optimization.py  parse_trajectory.py  phases.py  prog_trajectory.py  recovery.py  resolve_members.py  roster_discovery.py  session_report.py  strat_config.py  timeline_diff.py  wipes.py
api/: __init__.py  auth.py  config.py  main.py
db/: __init__.py  models.py  session.py
ingest/: __init__.py  cactbot.py  delta.py  events.py  fflogs.py  wiki.py  xivapi.py
jobs/: __init__.py  backfill_field.py  poll_watched.py
model/: __init__.py
scripts/: backfill_prune_combatants.py  bootstrap_abilities.py  debug_casts.py  debug_death.py  ingest_fru_kills.py  list_zones.py  migrate_canonical_encounters.py  refresh_cactbot.ps1  rescan_events.py  run_prod.ps1  scrape_ability_durations.py  verify_delta.py  verify_events.py  verify_faults.py  verify_fflogs.py  verify_gcd.py  verify_wipes.py
tests/: __init__.py  conftest.py  test_ability_classifier.py  test_ability_labels_api.py  test_assignment.py  test_auth_middleware.py  test_backfill_field.py  test_body_check_fault_v1_14.py  test_burst.py  (+62 more)
(+33 files in other folders)
