[project]
name = "fflogs-progression-tracker"
version = "1.17.1"
description = "FFLogs progression tracker for a high-end FFXIV static (see PLAN.md)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["api*", "ingest*", "db*", "analysis*", "model*", "jobs*"]
exclude = ["tests*", "web*"]

[tool.ruff]
line-length = 100
target-version = "py311"
